finished changed to quote as requested by Shahina. Once pushed up, will need to create new quotes for all 31 jobs; will be very easy to do. This will get the cost correct (no discount on computational cost) and display all the costs correctly. Once that is done, will need to merely comment out some lines in mpsQuote to tidy it up.